Fixed snackbar z-index

--- a/asset/less/theme.less
+++ b/asset/less/theme.less
@@ -605,6 +605,7 @@ footer {
 	transition: opacity ease 0.2s, bottom ease 0.2s;
 	transform: translate(-50%, 0);
 	white-space: nowrap;
+	z-index: 99;
 
 	&.active {
 		opacity: 1;
